--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.5.0",
     "jsonwebtoken": "^9.0.2",
     "react": "^19.0.0",
+    "react-alice-carousel": "^2.9.1",
     "react-dom": "^19.0.0",
     "react-helmet": "^6.1.0",
     "react-markdown": "^10.1.0",
