--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^19.0.0",
     "react-helmet": "^6.1.0",
     "react-markdown": "^10.1.0",
+    "react-responsive": "^10.0.1",
     "react-router-dom": "^7.5.0"
   },
   "devDependencies": {
