--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,7 @@
     "google-auth-library": "^9.15.1",
     "helmet": "^8.1.0",
     "jimp": "^1.6.0",
+    "jsdom": "^24.1.0",
     "jsonwebtoken": "^9.0.2",
     "langchain": "^0.3.27",
     "lowdb": "^7.0.1",
@@ -48,11 +49,13 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.2",
+    "@types/jsdom": "^21.1.6",
     "@types/luxon": "^3.6.2",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.15.17",
     "@types/node-cron": "^3.0.11",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.6",
     "typescript": "^5.8.3"
   }
 }
