--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "@types/jimp": "^0.2.1",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/mongoose": "^5.11.96",
+    "@types/multer": "^2.0.0",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "better-sqlite3": "^12.4.1",
@@ -40,6 +41,7 @@
     "lowdb": "^7.0.1",
     "luxon": "^3.6.1",
     "morgan": "^1.10.0",
+    "multer": "^2.0.2",
     "node-cron": "^3.0.3",
     "nodemon": "^3.1.9",
     "openai": "^4.93.0",
