--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,8 @@
     "start": "node --no-warnings dist/index.js",
     "prestart": "npm run build",
     "seed": "node data/seed-data.js",
-    "migrate": "npm run build && node dist/scripts/migrateToSqlite.js"
+    "migrate": "tsx src/scripts/migrateToSqlite.ts",
+    "compress-images": "tsx src/scripts/compressExistingImages.ts"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +26,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/mongoose": "^5.11.96",
     "@types/multer": "^2.0.0",
+    "@types/sharp": "^0.31.1",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "better-sqlite3": "^12.4.1",
@@ -45,6 +47,7 @@
     "node-cron": "^3.0.3",
     "nodemon": "^3.1.9",
     "openai": "^4.93.0",
+    "sharp": "^0.34.5",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
