--- a/server/package.json
+++ b/server/package.json
@@ -16,33 +16,37 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": ">=20.0.0",
+    "npm": ">=10.0.0"
+  },
   "type": "module",
   "dependencies": {
     "@langchain/deepseek": "^0.0.1",
-    "@runware/sdk-js": "^1.1.38",
+    "@runware/sdk-js": "^1.2.2",
     "@types/bcrypt": "^5.0.2",
     "@types/better-sqlite3": "^7.6.13",
     "@types/jimp": "^0.2.1",
-    "@types/jsonwebtoken": "^9.0.9",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.96",
     "@types/multer": "^2.0.0",
     "@types/sharp": "^0.31.1",
-    "axios": "^1.8.4",
+    "axios": "^1.13.2",
     "bcrypt": "^5.1.1",
-    "better-sqlite3": "^12.4.1",
+    "better-sqlite3": "^12.5.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0",
+    "express": "^5.2.1",
     "express-rate-limit": "^7.5.0",
-    "fs-extra": "^11.3.0",
+    "fs-extra": "^11.3.2",
     "google-auth-library": "^9.15.1",
     "helmet": "^8.1.0",
     "jimp": "^1.6.0",
-    "jsonwebtoken": "^9.0.2",
+    "jsonwebtoken": "^9.0.3",
     "langchain": "^0.3.27",
     "lowdb": "^7.0.1",
-    "luxon": "^3.6.1",
-    "morgan": "^1.10.0",
+    "luxon": "^3.7.2",
+    "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "node-cron": "^3.0.3",
     "nodemon": "^3.1.9",
@@ -51,14 +55,14 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.2",
-    "@types/luxon": "^3.6.2",
-    "@types/morgan": "^1.9.9",
-    "@types/node": "^22.15.17",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.6",
+    "@types/luxon": "^3.7.1",
+    "@types/morgan": "^1.9.10",
+    "@types/node": "^22.19.1",
     "@types/node-cron": "^3.0.11",
     "ts-node": "^10.9.2",
-    "tsx": "^4.19.2",
-    "typescript": "^5.8.3"
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3"
   }
 }
