--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.96",
     "@types/multer": "^2.0.0",
+    "@types/nodemailer": "^7.0.4",
     "@types/sharp": "^0.31.1",
     "axios": "^1.13.2",
     "bcrypt": "^5.1.1",
@@ -48,6 +49,7 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "node-cron": "^3.0.3",
+    "nodemailer": "^7.0.11",
     "nodemon": "^3.1.9",
     "openai": "^4.93.0",
     "sharp": "^0.34.5",
