Fixed database docker(removed it) and added admin panel URL route

--- a/admin/Dockerfile
+++ b/admin/Dockerfile
@@ -11,6 +11,7 @@ ARG VITE_USE_RELATIVE_API=false
 ARG VITE_FRONTEND_DEV_MODE=true
 ARG VITE_CLIENT_URL_DEV=http://localhost:5173
 ARG VITE_CLIENT_URL_PROD=http://localhost:5173
+ARG SVELTEKIT_BASE_PATH=/admin
 
 # Set as environment variables for Vite build
 ENV VITE_BACKEND_DEV_MODE=$VITE_BACKEND_DEV_MODE
@@ -20,6 +21,7 @@ ENV VITE_USE_RELATIVE_API=$VITE_USE_RELATIVE_API
 ENV VITE_FRONTEND_DEV_MODE=$VITE_FRONTEND_DEV_MODE
 ENV VITE_CLIENT_URL_DEV=$VITE_CLIENT_URL_DEV
 ENV VITE_CLIENT_URL_PROD=$VITE_CLIENT_URL_PROD
+ENV SVELTEKIT_BASE_PATH=$SVELTEKIT_BASE_PATH
 
 # Copy package files
 COPY admin/package*.json ./
