--- a/docker-compose.env.example
+++ b/docker-compose.env.example
@@ -20,15 +20,20 @@
 #   SQLITE_DATA_PATH=/home/jonathan/databases/real-fake-news              (absolute path)
 #   SQLITE_DATA_PATH=./database                                            (relative to repo - for testing only)
 #   SQLITE_DATA_PATH=~/databases/real-fake-news                            (home directory - expands to absolute)
+# Production example:
+# SQLITE_DATA_PATH=/var/www/otherProjects/Real-Fake-News-Data
 SQLITE_DATA_PATH=/home/jonathan/Documents/GitHub/Real-Fake-News-Data
 
 # Images directory (must exist on host)
 # Article images will be stored in: ${IMAGES_DATA_PATH}/ and ${IMAGES_DATA_PATH}/compressed/
 #
+# Production example:
+# IMAGES_DATA_PATH=/var/www/otherProjects/Real-Fake-News-Data/images
+#
 # Examples:
-#   IMAGES_DATA_PATH=/home/jonathan/Documents/GitHub/Real-Fake-News-Data/images  (outside repo - recommended)
-#   IMAGES_DATA_PATH=/home/jonathan/images/real-fake-news                        (absolute path)
-#   IMAGES_DATA_PATH=./images                                                     (relative to repo - for testing only)
+#   IMAGES_DATA_PATH=/var/www/otherProjects/Real-Fake-News-Data/images  (production)
+#   IMAGES_DATA_PATH=/home/jonathan/Documents/GitHub/Real-Fake-News-Data/images  (local)
+#   IMAGES_DATA_PATH=./images                                             (testing only)
 IMAGES_DATA_PATH=/home/jonathan/Documents/GitHub/Real-Fake-News-Data/images
 
 # =============================================================================
@@ -60,18 +65,30 @@ ENABLE_SCHEDULED_JOBS=true
 LOCAL_DEV_BACKEND=false
 
 # =============================================================================
-# Client Environment Variables
+# Client Environment Variables (BUILD TIME - baked into static files)
 # =============================================================================
+# IMPORTANT: These are used at BUILD time. You must rebuild containers after changing them.
+
+# Use relative API URLs (recommended for production with nginx proxy)
+# When true, frontend uses "/api" instead of full URLs
+VITE_USE_RELATIVE_API=true
+
+# Set to false for production, true for local development
 VITE_BACKEND_DEV_MODE=false
+
+# Only used if VITE_USE_RELATIVE_API=false
 VITE_API_BASE_DEV=http://localhost:5001
-VITE_API_BASE_PROD=http://server:5001
-VITE_USE_RELATIVE_API=false
+VITE_API_BASE_PROD=https://real.sensorcensor.xyz
+
 VITE_DEBUG_LOGS=false
 
 # =============================================================================
-# Admin Environment Variables
+# Admin Environment Variables (BUILD TIME - baked into static files)
 # =============================================================================
+# IMPORTANT: These are used at BUILD time. You must rebuild containers after changing them.
+
 VITE_FRONTEND_DEV_MODE=false
 VITE_CLIENT_URL_DEV=http://localhost:5173
-VITE_CLIENT_URL_PROD=http://localhost:5173
+VITE_CLIENT_URL_PROD=https://real.sensorcensor.xyz
+
 
