fixed development docker setup
to be tested in the production set up as well

--- a/client/.env.example
+++ b/client/.env.example
@@ -1,6 +1,6 @@
-# Admin Panel Environment Variables
+# Client Frontend Environment Variables
 # Copy this file to .env and adjust the values as needed
-#
+# 
 # IMPORTANT: This file is ONLY for local development (npm run dev)
 # For Docker, use the root .env file and docker-compose.yml build args
 
@@ -8,8 +8,9 @@
 # API Configuration
 # =============================================================================
 
-# Use relative API URLs (for nginx proxy setup)
-# When true, API calls use relative paths like "/api" instead of full URLs
+# Use relative API URLs (recommended for local dev with proxy)
+# When true, frontend uses "/api" instead of full URLs
+# Set to false to use absolute URLs (VITE_API_BASE_DEV or VITE_API_BASE_PROD)
 VITE_USE_RELATIVE_API=false
 
 # Backend Development Mode
@@ -18,38 +19,20 @@ VITE_USE_RELATIVE_API=false
 VITE_BACKEND_DEV_MODE=true
 
 # API Base URLs (only used if VITE_USE_RELATIVE_API=false)
-# Development mode server URL (with /api prefix)
+# Development mode server URL
 VITE_API_BASE_DEV=http://localhost:5001
-# Production mode server URL (with /api prefix)
+# Production mode server URL
 VITE_API_BASE_PROD=https://real.sensorcensor.xyz
 
-# =============================================================================
-# Frontend Configuration
-# =============================================================================
-
-# Frontend Development Mode
-# Set to "true" for local development, "false" for production
-VITE_FRONTEND_DEV_MODE=true
-
-# Admin Panel Development Server Port
-# Port for the Vite dev server (default: 5174)
-VITE_PORT=5174
-
-# =============================================================================
-# Client URL Configuration (for article links)
-# =============================================================================
-
-# Development mode client URL - used when VITE_FRONTEND_DEV_MODE=true
-VITE_CLIENT_URL_DEV=http://localhost:5173
-
-# Production mode client URL - used when VITE_FRONTEND_DEV_MODE=false
-VITE_CLIENT_URL_PROD=https://real.sensorcensor.xyz
+# Debug Logging
+# Set to true to enable debug logs in the browser console
+VITE_DEBUG_LOGS=true
 
 # =============================================================================
 # Legacy/Deprecated Variables
 # =============================================================================
 # The following variable is kept for backward compatibility
-# VITE_LOCAL_DEV_MODE=true  # Deprecated, use VITE_FRONTEND_DEV_MODE instead
+# VITE_LOCAL_DEV_MODE=true  # Deprecated, use VITE_BACKEND_DEV_MODE instead
 
 # =============================================================================
 # Notes
@@ -58,4 +41,3 @@ VITE_CLIENT_URL_PROD=https://real.sensorcensor.xyz
 # - These variables are baked into the bundle at BUILD time
 # - For local development: Copy this file to .env and run "npm run dev"
 # - For Docker: Use root .env file and docker-compose.yml build args
-# - The admin panel uses SvelteKit, so variables are available via import.meta.env
