--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -26,15 +26,18 @@ server {
         add_header Cache-Control "public, immutable";
     }
 
-    # Proxy API requests to backend (if needed, otherwise handled by main nginx)
-    # Uncomment if you want direct proxying from client container
-    # location /api {
-    #     proxy_pass http://server:5001;
-    #     proxy_http_version 1.1;
-    #     proxy_set_header Upgrade $http_upgrade;
-    #     proxy_set_header Connection 'upgrade';
-    #     proxy_set_header Host $host;
-    #     proxy_cache_bypass $http_upgrade;
-    # }
+    # Proxy API requests to backend server container
+    # This allows the client to use relative URLs (/api) which get proxied to the server
+    location /api {
+        proxy_pass http://server:5001/api;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
+    }
 }
 
