--- a/docker-compose.env.example
+++ b/docker-compose.env.example
@@ -46,7 +46,11 @@ ADMIN_PORT=5174
 # =============================================================================
 # Server Environment Variables
 # =============================================================================
-NODE_ENV=production
+# NOTE: NODE_ENV is controlled by docker-compose files:
+#   - Production: docker-compose.yml defaults to "production"
+#   - Development: docker-compose.dev.yml sets "development"
+#   Do NOT set NODE_ENV here - it will be overridden anyway!
+
 CLIENT_URL=http://localhost:5173
 ADMIN_PASSWORD=changeme123
 
