Added horoscope section
Initial horoscope addition

Added VITE_SHOW_HOROSCOPES constant to root .env for client-side control

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -9,6 +9,7 @@ ARG VITE_API_BASE_DEV=http://localhost:5001
 ARG VITE_API_BASE_PROD=http://server:5001
 ARG VITE_USE_RELATIVE_API=false
 ARG VITE_DEBUG_LOGS=true
+ARG VITE_SHOW_HOROSCOPES=true
 
 # Set as environment variables for Vite build
 ENV VITE_BACKEND_DEV_MODE=$VITE_BACKEND_DEV_MODE
@@ -16,6 +17,7 @@ ENV VITE_API_BASE_DEV=$VITE_API_BASE_DEV
 ENV VITE_API_BASE_PROD=$VITE_API_BASE_PROD
 ENV VITE_USE_RELATIVE_API=$VITE_USE_RELATIVE_API
 ENV VITE_DEBUG_LOGS=$VITE_DEBUG_LOGS
+ENV VITE_SHOW_HOROSCOPES=$VITE_SHOW_HOROSCOPES
 
 # Copy package files
 COPY client/package*.json ./
