--- a/docker-compose.env.example
+++ b/docker-compose.env.example
@@ -86,6 +86,10 @@ VITE_API_BASE_PROD=https://real.sensorcensor.xyz
 
 VITE_DEBUG_LOGS=false
 
+# Temporary feature flag - set to "false" to hide horoscopes section
+# Remove this when no longer needed
+VITE_SHOW_HOROSCOPES=true
+
 # =============================================================================
 # Admin Environment Variables (BUILD TIME - baked into static files)
 # =============================================================================
