--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,6 +52,7 @@ services:
         - VITE_API_BASE_PROD=${VITE_API_BASE_PROD:-http://server:5001}
         - VITE_USE_RELATIVE_API=${VITE_USE_RELATIVE_API:-true}
         - VITE_DEBUG_LOGS=${VITE_DEBUG_LOGS:-false}
+        - VITE_SHOW_HOROSCOPES=${VITE_SHOW_HOROSCOPES:-true}
     container_name: real-fake-news-client
     ports:
       - "${CLIENT_PORT:-5173}:80"
