--- a/docker-compose.env.example
+++ b/docker-compose.env.example
@@ -95,7 +95,25 @@ VITE_SHOW_HOROSCOPES=true
 # =============================================================================
 # IMPORTANT: These are used at BUILD time. You must rebuild containers after changing them.
 
-VITE_FRONTEND_DEV_MODE=false
+# Backend connection mode for admin panel
+# Set to "true" to use local dev backend (localhost:5001)
+# Set to "false" to use production backend (VITE_API_BASE_PROD)
+VITE_BACKEND_DEV_MODE=true
+
+# Dev backend URL (used when VITE_BACKEND_DEV_MODE=true)
+# Note: If admin is in Docker and server is on host, use host.docker.internal:5001 (Mac/Windows)
+#       or use the host's IP address instead of localhost
+VITE_API_BASE_DEV=http://localhost:5001
+
+# Production backend URL (used when VITE_BACKEND_DEV_MODE=false)
+# Use IP:port format for connecting to remote production server
+# Example: http://162.0.237.138:5001
+VITE_API_BASE_PROD=http://162.0.237.138:5001
+
+# Use relative API URLs (for nginx proxy - usually false in dev mode)
+VITE_USE_RELATIVE_API=false
+
+VITE_FRONTEND_DEV_MODE=true
 VITE_CLIENT_URL_DEV=http://localhost:5173
 VITE_CLIENT_URL_PROD=https://real.sensorcensor.xyz
 
