Added recipe section client .env trigger

--- a/docker-compose.env.example
+++ b/docker-compose.env.example
@@ -90,6 +90,10 @@ VITE_DEBUG_LOGS=false
 # Remove this when no longer needed
 VITE_SHOW_HOROSCOPES=true
 
+# Temporary feature flag - set to "false" to hide recipes section
+# Remove this when no longer needed
+VITE_SHOW_RECIPES=true
+
 # =============================================================================
 # Admin Environment Variables (BUILD TIME - baked into static files)
 # =============================================================================
