--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -22,6 +22,7 @@ services:
         - VITE_API_BASE_PROD=http://server:5001  # Docker service name for inter-container communication
         - VITE_DEBUG_LOGS=true
         - VITE_SHOW_HOROSCOPES=${VITE_SHOW_HOROSCOPES:-true}
+        - VITE_SHOW_RECIPES=${VITE_SHOW_RECIPES:-true}
 
   admin:
     build:
