--- a/client/package.json
+++ b/client/package.json
@@ -19,9 +19,9 @@
     "dotenv": "^16.5.0",
     "jsonwebtoken": "^9.0.2",
     "phosphor-react": "^1.4.1",
-    "react": "^19.0.0",
+    "react": "^19.2.3",
     "react-alice-carousel": "^2.9.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.2.3",
     "react-helmet": "^6.1.0",
     "react-markdown": "^10.1.0",
     "react-responsive": "^10.0.1",
@@ -29,14 +29,18 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-basic-ssl": "^2.0.0",
     "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.22",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.6"
