fixed docker nginx and compose files

--- a/admin/nginx.conf
+++ b/admin/nginx.conf
@@ -15,7 +15,18 @@ server {
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
 
-    # Serve static files
+    # Serve static files - handle /admin base path
+    # When SVELTEKIT_BASE_PATH=/admin, files are served from /admin/*
+    location /admin {
+        alias /usr/share/nginx/html;
+        try_files $uri $uri/ /admin/index.html;
+        # Ensure proper MIME types for JS modules
+        location ~* \.(js|mjs)$ {
+            add_header Content-Type application/javascript;
+        }
+    }
+    
+    # Fallback for root path (when SVELTEKIT_BASE_PATH is empty)
     location / {
         try_files $uri $uri/ /index.html;
     }
